SOLR-17931: Remove deprecated method in collection state classes